[package]
name = "tryst"
version = "0.1.0"
authors = ["Siobhan Sterrett <siobhan.sterrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tryst"
path = "src/cli.rs"

[dependencies]
smallvec = "1.6.1"
unicode-xid = { version = "0.2.2", features = ["no_std"] }