[package]
name = "tryst"
version = "0.1.0"
authors = ["Siobhan Sterrett <siobhan.sterrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tryst"
path = "src/cli.rs"

[dependencies]
num = "0.4"
regex = "1"
rustyline = "8"
unicode-xid = "0.2.2"